--- a/Task6/Form.html
+++ b/Task6/Form.html
@@ -9,7 +9,7 @@
 </style>
 </head>
 <body>
-<div id ="calculator">
+<div id ="calculator" align="center" style="border: 2">
 	<form id="calcForm">
 		<div>
 			<input type="text" size="29" id="Calc"/>
